k8s/homologacao/api.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: appname-api-hom
  namespace: dev
  labels:
    app: appname-api-hom
    env: homologacao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appname-api-hom
      env: homologacao
  template:
    metadata:
      labels:
        app: appname-api-hom
        env: homologacao
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "1234"
    spec:
      hostAliases:
      - ip: "10.8.26.97"
        hostnames:
        - "oracle-apoio"
        - "oracle-apoio.trt8.net"
      containers:
      - name: appname-api-hom-container
        image: registry.trt8.jus.br/desenvolvimento/appname/appname-api:<IMAGE_VERSION>
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: appname-api-hom-service
  namespace: dev
  labels:
    app: appname-api-hom
    env: homologacao
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  selector:
     app: appname-api-hom
     env: homologacao
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
